RESOLVED FIXED191908
UI side compositing doesn't paint on Mac
https://bugs.webkit.org/show_bug.cgi?id=191908
Summary UI side compositing doesn't paint on Mac
Antti Koivisto
Reported 2018-11-22 08:14:15 PST
It tries to use unsupported IOSurface formats.
Attachments
patch (5.20 KB, patch)
2018-11-22 08:24 PST, Antti Koivisto
no flags
with HAVE_IOSURFACE_RGB10 (5.74 KB, patch)
2018-11-22 11:35 PST, Antti Koivisto
no flags
Archive of layout-test-results from ews126 for ios-simulator-wk2 (2.44 MB, application/zip)
2018-11-22 17:01 PST, EWS Watchlist
no flags
Antti Koivisto
Comment 1 2018-11-22 08:24:24 PST
Sam Weinig
Comment 2 2018-11-22 09:04:48 PST
Comment on attachment 355475 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=355475&action=review > Source/WebCore/platform/graphics/cocoa/IOSurface.h:53 > +#if PLATFORM(IOS_FAMILY) It seems like this would be a bit nicer if it was HAVE(IOSURFACE_RBA10) or something like that.
Antti Koivisto
Comment 3 2018-11-22 10:43:21 PST
(In reply to Sam Weinig from comment #2) > Comment on attachment 355475 [details] > patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=355475&action=review > > > Source/WebCore/platform/graphics/cocoa/IOSurface.h:53 > > +#if PLATFORM(IOS_FAMILY) > > It seems like this would be a bit nicer if it was HAVE(IOSURFACE_RBA10) or > something like that. Maybe though I kinda hate trying to figure out what those mean.
Antti Koivisto
Comment 4 2018-11-22 11:35:41 PST
Created attachment 355479 [details] with HAVE_IOSURFACE_RGB10
Tim Horton
Comment 5 2018-11-22 15:10:22 PST
Comment on attachment 355479 [details] with HAVE_IOSURFACE_RGB10 View in context: https://bugs.webkit.org/attachment.cgi?id=355479&action=review > Source/WebKit/Shared/RemoteLayerTree/RemoteLayerBackingStore.mm:505 > +#if HAVE(IOSURFACE_RGB10) All seems a bit overkill when you could have just done this one. Also we probably want something different here so we're not just using RGBA on wide-color macOS? But that's a separate problem.
EWS Watchlist
Comment 6 2018-11-22 17:01:11 PST
Comment on attachment 355479 [details] with HAVE_IOSURFACE_RGB10 Attachment 355479 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: https://webkit-queues.webkit.org/results/10113349 New failing tests: media/no-fullscreen-when-hidden.html
EWS Watchlist
Comment 7 2018-11-22 17:01:13 PST
Created attachment 355492 [details] Archive of layout-test-results from ews126 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews126 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Antti Koivisto
Comment 8 2018-11-23 06:41:17 PST
> All seems a bit overkill when you could have just done this one. I like having compiler check for correctness when possible. > Also we probably want something different here so we're not just using RGBA > on wide-color macOS? But that's a separate problem. Yep. I'm bit confused why all these deep color bits are set on Mac but then we don't actually use deep color backing stores.
WebKit Commit Bot
Comment 9 2018-11-23 07:07:49 PST
Comment on attachment 355479 [details] with HAVE_IOSURFACE_RGB10 Clearing flags on attachment: 355479 Committed r238459: <https://trac.webkit.org/changeset/238459>
WebKit Commit Bot
Comment 10 2018-11-23 07:07:51 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 11 2018-11-23 07:08:29 PST
Note You need to log in before you can comment on or make changes to this bug.